<resources>
    <string name="app_name">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- <string name="fragment_login_hello">Rick and Morty</string>-->
    <string name="fragment_login_user_hint">Usuario</string>
    <string name="fragment_login_password_hint">Contraseña</string>
    <string name="fragment_login_password_forgotten">¿Olvidaste tu contraseña?</string>
    <string name="fragment_login_button_text">Continuar</string>
    <string name="fragment_details_button_text">Volver</string>
    <string name="night_mode"> Night mode </string>
    <string name="ver_personajes"> Quitar los personajes  </string>
    <string name="add_favourites_enabled"> Eliminar boton de agregar a favoritos  </string>
    <string name="settings"> Settings  </string>
</resources>